--- a/configs/model/cldm_eps/1_1_14/cldm_eps_400_ddim.yaml
+++ b/configs/model/cldm_eps/1_1_14/cldm_eps_400_ddim.yaml
@@ -1,4 +1,4 @@
-target: model.cldm_zc_xs_eps_ddpm.ControlLDM
+target: model.cldm_zc_xs_eps_ddim.ControlLDM
 params:
   linear_start: 0.00085
   linear_end: 0.0120
@@ -16,7 +16,7 @@ params:
   monitor: val/loss_simple_ema
   scale_factor: 0.18215
   use_ema: False
-  sync_path: /workspace/test/DiffEIC/logs2/1_1_14_add_xs_600_eps_ddim/lightning_logs/version_1/checkpoints/step=209999.ckpt #/workspace/test/DiffEIC/logs/1_2_8/lightning_logs/version_0/checkpoints/step=29999.ckpt  path to the StableDiffusion v 2.1 weights
+  sync_path:  #path to the StableDiffusion v 2.1 weights
   synch_control: true
   ckpt_path_pre: ~
   
@@ -31,7 +31,7 @@ params:
   l_bpp_weight: 14.0
   
   control_stage_config:
-    target: model.cldm_zc_xs_eps_ddpm.CDDM
+    target: model.cldm_zc_xs_eps_ddim.CDDM
     params:
       use_checkpoint: True
       image_size: 32 # unused
