--- a/configs/model/cldm_eps/1_1_14/cldm_eps_500_ddim.yaml
+++ b/configs/model/cldm_eps/1_1_14/cldm_eps_500_ddim.yaml
@@ -16,7 +16,7 @@ params:
   monitor: val/loss_simple_ema
   scale_factor: 0.18215
   use_ema: False
-  sync_path: /workspace/test/DiffEIC/logs2/1_0.2_10_add_xs_100_stage2/lightning_logs/version_4/checkpoints/step=149999.ckpt #/workspace/test/DiffEIC/logs/1_2_8/lightning_logs/version_0/checkpoints/step=29999.ckpt  path to the StableDiffusion v 2.1 weights
+  sync_path: #path to the StableDiffusion v 2.1 weights
   synch_control: true
   ckpt_path_pre: ~
   
@@ -31,7 +31,7 @@ params:
   l_bpp_weight: 14.0
   
   control_stage_config:
-    target: model.cldm_zc_xs.CDDM
+    target: model.cldm_zc_xs_eps_ddim.CDDM
     params:
       use_checkpoint: True
       image_size: 32 # unused
