--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 
-torch==2.0.1
+#torch==2.0.1
 xformers==0.0.22
-compressai==1.2.6
+compressai==1.2.6 强制pip使用当前环境
 einops
 kornia
 lpips
@@ -15,7 +15,7 @@ Pillow
 pytorch_lightning==1.5.0
 thop==0.1.1.post2209072238
 timm==0.9.7
-torchvision==0.15.2
+#torchvision==0.15.2
 tqdm
 pandas
 torchac
